--- a/roboshop-v1/docker-compose.yaml
+++ b/roboshop-v1/docker-compose.yaml
@@ -3,26 +3,40 @@ services:
   frontend:
     image: chaitu1812/frontend-rhel9
     networks: &net ["expense"]
-    depends_on: []
+    depends_on: ["catalogue","user"]
+
   load_schema:
     image: chaitu1812/load-schema-rhel9
     environment:
-      CODE_URL: https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip
-      SCHEMA_FILE: /app/db/master-data.js
-      MONGO_DB_ADDRESS: mongod
+      CODE_URL: "https://roboshop-artifacts.s3.amazonaws.com/catalogue-v3.zip"
+      SCHEMA_FILE: ""/app/db/master-data.js"
+      MONGO_DB_ADDRESS: "mongod"
     depends_on: ["mongod"]
+
   catalogue:
     image: chaitu1812/catalogue-rhel9
     networks: *net
     depends_on: ["mongod"]
+    environment:
+      MONGO: "true"
+      MONGO_URL: "mongodb://mongod:27017/catalogue"
+
   mongod:
     image: chaitu1812/mongo-rhel9
     networks: *net
+
   user:
     image: chaitu1812/mongo-rhel9
     networks: *net
     depends_on: ["redis"]
+    environment:
+      - REDIS_URL="redis://redis:6379"
+      - MONGO_URL="mongodb://mongod:27017/users"
+
   redis:
     image: chaitu1812/redis-rhel9
     networks: *net
 
+networks:
+  expense:
+    external: true
