working with user & redis components.

--- a/roboshop-v1/docker-compose.yaml
+++ b/roboshop-v1/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     depends_on: ["mongod"]
     environment:
       MONGO: "true"
-      MONGO_URL: "mongodb://mongod:27017/catalogue"
+      MONGO_URL: "mongod"
 
   mongod:
     image: chaitu1812/mongo-rhel9
