working with user & redis components.

--- a/roboshop-v1/docker-compose.yaml
+++ b/roboshop-v1/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
     image: chaitu1812/mongo-rhel9
     networks: *net
 
-  user:
+  userd:
     image: chaitu1812/mongo-rhel9
     networks: *net
     depends_on: ["redis"]
