--- a/roboshop-v1/docker-compose.yaml
+++ b/roboshop-v1/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   frontend:
     image: chaitu1812/frontend-rhel9
     networks: &net ["expense"]
-    depends_on: ["catalogue","user"]
+    depends_on: ["catalogue","userd"]
     ports:
       - "80:80"
 
