--- a/roboshop-v1/docker-compose.yaml
+++ b/roboshop-v1/docker-compose.yaml
@@ -71,7 +71,7 @@ services:
     networks: *net
     environment:
       CART_ENDPOINT: "cart:8080"
-      DB_HOST: "mysql"
+      DB_HOST: mysql
     depends_on: ["mysql"]
 
   mysql:
