--- a/roboshop-v1/docker-compose.yaml
+++ b/roboshop-v1/docker-compose.yaml
@@ -70,7 +70,7 @@ services:
     image: chaitu1812/shipping-rhel9
     networks: *net
     environment:
-      CART_ENDPOINT: "cart:8080"
+      CART_ENDPOINT: cart:8080
       DB_HOST: mysql
     depends_on: ["mysql"]
 
