--- a/roboshop-v1/docker-compose.yaml
+++ b/roboshop-v1/docker-compose.yaml
@@ -61,7 +61,7 @@ services:
       MYSQL_ADDRESS: "mysql"
       MYSQL_USER: "root"
       MYSQL_PASSWORD: "RoboShop@1"
-    networks: &net ["roboshop"]
+    networks: *net
     depends_on: ["mysql"]
 
   shipping:
