--- a/roboshop-v1/docker-compose.yaml
+++ b/roboshop-v1/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.4"
 services:
   frontend:
     image: chaitu1812/frontend-rhel9
-    networks: &net ["roboshop"]
+    networks: &net ["robo"]
     depends_on: ["catalogue","userd","cart","shipping","dispatch","payment"]
     ports:
       - "80:80"
