--- a/roboshop-optimize-v2/docker-compose.yaml
+++ b/roboshop-optimize-v2/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       MYSQL_ADDRESS: "mysql"
       MYSQL_USER: "root"
       MYSQL_PASSWORD: "RoboShop@1"
-    networks: *net
+    networks: &net ["robo"]
     depends_on: ["mysql"]
 
   shipping:
