--- a/werf.yaml
+++ b/werf.yaml
@@ -1,18 +1,18 @@
----
 project: demo
 configVersion: 1
----
+
 image: dfrontend
 dockerfile: frontend-dockerfile
 context: roboshop-v1
+git:
+  - url: https://github.com/your-repo/roboshop-v1.git  # Add your repository URL
+    branch: main
+    add: /
+    to: /app
 
 shell:
   beforeInstall:
-    - echo "Commands on the Before Install stage"
-  install:
-    - echo "Commands on the Install stage"
-    - echo "Installing ..."
-  beforeSetup:
-    - echo "Commands on the Before Setup stage"
-  setup:
-    - echo "Commands on the Setup stage"
+    - mkdir -p /app
+    - chmod -R 755 /app
+ # Add actual test/setup commands
+
