--- a/werf.yaml
+++ b/werf.yaml
@@ -12,23 +12,11 @@ configVersion: 1
 image: chaitu1812-web
 from: nginx:latest
 
-#ansible:
-#  install:
-#    - debug:
-#        msg: 'Start install'
-#    - file:
-#        path: /usr/share/nginx/html
-#        mode: 0755
-#    - file:
-#        path: /web
-#        state: directory
-#        mode: 0755
-#    - debug:
-#        msg: 'End install'
-#
+
 git:
   - add: roboshop-optimize-v2
     to: /roboshop-optimize-v2
+    owner: root
 
 shell:
   beforeInstall:
