--- a/roboshop-v1/nginx.conf
+++ b/roboshop-v1/nginx.conf
@@ -30,7 +30,7 @@ http {
         listen       80;
         listen       [::]:80;
         server_name  _;
-        root         /usr/share/nginx/html;
+        /usr/share/nginx/htmroot         l;
 
         include /etc/nginx/default.d/*.conf;
 
